--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="more-inf-block">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
     </div>
     <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+      <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input
@@ -23,7 +23,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -31,12 +31,12 @@
             type="text"
             class="task"
           >
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input 
@@ -44,8 +44,8 @@
             value="Go Shopping"
             class="task"
           >
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="edit-button">Save</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -59,8 +59,8 @@
             type="text"
             class="task"
           >
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
