--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="main-element">
       <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="tasks">
           <input
             id="new-task"
             class="task"
@@ -23,7 +23,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incompleted">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -32,7 +32,7 @@
             class="task"
           >
           <button class="edit-button">Edit</button>
-          <button class="delete-button">
+          <button class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
@@ -45,13 +45,13 @@
             class="task"
           >
           <button class="edit-button">Save</button>
-          <button class="delete-button">
+          <button class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
@@ -60,7 +60,7 @@
             class="task"
           >
           <button class="edit-button">Edit</button>
-          <button class="delete-button">
+          <button class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
