--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body-page">
     <div class="more-inf-block">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="more-inf-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
     </div>
     <div class="main-element">
@@ -19,24 +19,24 @@
             class="task"
             type="text"
           >
-          <button>Add</button>
+          <button id="list-item-btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleted">
-        <li>
+      <h3 class="sec-title">Todo</h3>
+      <ul class="tasks-list" id="incompleted">
+        <li id="tasks-list-item">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input 
             type="text"
             class="task"
           >
-          <button class="edit-button">Edit</button>
-          <button class="del-btn">
+          <button id="list-item-btn" class="edit-button">Edit</button>
+          <button id="list-item-btn" class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
+        <li id="tasks-list-item" class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input 
@@ -44,23 +44,23 @@
             value="Go Shopping"
             class="task"
           >
-          <button class="edit-button">Save</button>
-          <button class="del-btn">
+          <button id="list-item-btn" class="edit-button">Save</button>
+          <button id="list-item-btn" class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed">
-        <li>
+      <h3 class="sec-title">Completed</h3>
+      <ul class="tasks-list" id="completed">
+        <li id="tasks-list-item">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input 
             type="text"
             class="task"
           >
-          <button class="edit-button">Edit</button>
-          <button class="del-btn">
+          <button id="list-item-btn" class="edit-button">Edit</button>
+          <button id="list-item-btn" class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
