--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body-page">
-    <div class="more-inf-block">
+    <header class="more-inf-block">
       <img class="more-inf-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
-    </div>
-    <div class="main-element">
-      <p id="top-section-for-adding-element-to-list">
-        <label for="new-task">Add Item</label>
+    </header>
+    <main class="main-element">
+      <section id="top-section-for-adding-element-to-list">
+        <h3 class="sec-title" for="new-task">Add Item</h3>
         <div class="tasks">
           <input
             id="new-task"
@@ -21,51 +21,55 @@
           >
           <button id="list-item-btn">Add</button>
         </div>
-      </p>
-      <h3 class="sec-title">Todo</h3>
-      <ul class="tasks-list" id="incompleted">
-        <li id="tasks-list-item">
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input 
-            type="text"
-            class="task"
-          >
-          <button id="list-item-btn" class="edit-button">Edit</button>
-          <button id="list-item-btn" class="del-btn">
-            <img src="./remove.svg">
-          </button>
-        </li>
-        <li id="tasks-list-item" class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input 
-            type="text"
-            value="Go Shopping"
-            class="task"
-          >
-          <button id="list-item-btn" class="edit-button">Save</button>
-          <button id="list-item-btn" class="del-btn">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="sec-title">Completed</h3>
-      <ul class="tasks-list" id="completed">
-        <li id="tasks-list-item">
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input 
-            type="text"
-            class="task"
-          >
-          <button id="list-item-btn" class="edit-button">Edit</button>
-          <button id="list-item-btn" class="del-btn">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3 class="sec-title">Todo</h3>
+        <ul class="tasks-list" id="incompleted">
+          <li id="tasks-list-item">
+            <input type="checkbox">
+            <label class="task">Pay Bills</label>
+            <input 
+              type="text"
+              class="task"
+            >
+            <button id="list-item-btn" class="edit-button">Edit</button>
+            <button id="list-item-btn" class="del-btn">
+              <img src="./remove.svg">
+            </button>
+          </li>
+          <li id="tasks-list-item" class="edit-mode">
+            <input type="checkbox">
+            <label class="task">Go Shopping</label>
+            <input 
+              type="text"
+              value="Go Shopping"
+              class="task"
+            >
+            <button id="list-item-btn" class="edit-button">Save</button>
+            <button id="list-item-btn" class="del-btn">
+              <img src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="sec-title">Completed</h3>
+        <ul class="tasks-list" id="completed">
+          <li id="tasks-list-item">
+            <input type="checkbox" checked>
+            <label class="task">See the Doctor</label>
+            <input 
+              type="text"
+              class="task"
+            >
+            <button id="list-item-btn" class="edit-button">Edit</button>
+            <button id="list-item-btn" class="del-btn">
+              <img src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
