refactor(extended-1.2): add alt tag to images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body-page">
     <header class="more-inf-block">
-      <img class="more-inf-img" src="./eisenhower-matrix.jpg">
+      <img class="more-inf-img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
     </header>
     <main class="main-element">
@@ -34,7 +34,7 @@
             >
             <button id="list-item-btn" class="edit-button">Edit</button>
             <button id="list-item-btn" class="del-btn">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove button">
             </button>
           </li>
           <li id="tasks-list-item" class="edit-mode">
@@ -47,7 +47,7 @@
             >
             <button id="list-item-btn" class="edit-button">Save</button>
             <button id="list-item-btn" class="del-btn">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
@@ -64,7 +64,7 @@
             >
             <button id="list-item-btn" class="edit-button">Edit</button>
             <button id="list-item-btn" class="del-btn">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
